Completed Phone Book
Added List on Home Page for selecting phone book
Added List for displaying phone book entries on phone-book.component
Added Form for adding a new entry to a phone book on phone-book.component
Added Search functionality for entries within a phonebook on phone-book.component
Added tests for home.component  and phone-book.component
Added relevant functions for retrieving data within api.service

--- a/Phonebook/ClientApp/src/app/home/home.component.html
+++ b/Phonebook/ClientApp/src/app/home/home.component.html
@@ -1,6 +1,12 @@
-<mat-action-list>
-  <h2 matSubheader>Select a Phone Book:</h2>
-  <mat-list-item *ngFor="let phonebook of phonebooks" [routerLink]="['phonebook', phonebook.id]" [id]="phonebook.id"
-  >{{phonebook.name | uppercase}}</mat-list-item>
-  <mat-divider></mat-divider>
-</mat-action-list>
+<mat-accordion>
+
+  <mat-action-list>
+    <h2 matSubheader>Select a Phone Book:</h2>
+    <div *ngFor="let phonebook of phonebooks">
+      <mat-list-item [routerLink]="['phonebook', phonebook.id]" [id]="phonebook.id"
+      >{{phonebook.name | uppercase}}</mat-list-item>
+      <mat-divider></mat-divider>
+    </div>
+  </mat-action-list>
+
+</mat-accordion>
