--- a/Phonebook/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/Phonebook/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,7 +1,7 @@
 <header>
   <mat-toolbar>
     <div class="basic-container">
-      <h1 [routerLink]="['/']">Phonebook</h1>
+      <a [routerLink]="['/']"><h1>Phonebook</h1></a>
     </div>
   </mat-toolbar>
 </header>
